--- a/composer.json
+++ b/composer.json
@@ -31,7 +31,8 @@
             "Database\\Seeders\\": "database/seeders/"
         },
         "files": [
-            "app/helpers.php"
+            "app/helpers.php",
+            "app/Traits/FormatTrait.php"
         ]
     },
     "autoload-dev": {
