--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,7 @@
         },
         "files": [
             "app/helpers.php",
-            "app/Traits/FormatTrait.php"
+            "app/Traits/HelperTrait.php"
         ]
     },
     "autoload-dev": {
