--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.14.1",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.5",
+        "silviolleite/laravelpwa": "^2.0",
         "wireui/wireui": "^1.1"
     },
     "require-dev": {
